Update application metadata, enhance descriptions, and refine UI elements; change 'Employer' to 'Corporate' and update internship status labels added change password function to employer

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "The Practywiz Web",
-  "name": "Create React App Sample",
+  "name": "Practywiz",
   "icons": [
     {
       "src": "favicon.ico",
