--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cropperjs": "^1.6.2",
     "dompurify": "^3.2.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "react": ">=18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-cropper": "^2.3.3",
