--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.4",
     "cropperjs": "^1.6.2",
     "dompurify": "^3.2.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "react": ">=18.0.0",
