--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.511.0",
     "react": ">=18.0.0",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-cropper": "^2.3.3",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
