--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "recharts": "^2.15.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4",
